other-vpol/disallow-all-secrets/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
  - name: mycontainer
    image: redis
    env:
    - name: SECRET_USERNAME
      valueFrom:
        secretKeyRef:
          name: mysecret
          key: username
    - name: SECRET_PASSWORD
      valueFrom:
        secretKeyRef:
          name: mysecret
          key: password
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: partial-secret-pod
spec:
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    env:
    - name: APPROVED_SECRET
      valueFrom:
        secretKeyRef:
          name: mysecret
          key: username
    - name: UNAPPROVED_SECRET
      valueFrom:
        secretKeyRef:
          name: othersecret
          key: password

---
apiVersion: v1
kind: Pod
metadata:
  name: secret-ref-pod
spec:
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
    envFrom:
    - secretRef:
        name: mysecret
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-vol-pod
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: mysecret
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    volumeMounts:
  - name: secret-volume
    readOnly: true
    mountPath: "/etc/secret-volume"
---
apiVersion: v1
kind: Pod
metadata:
  name: projected-secret-pod
spec:
  volumes:
  - name: projected-secret-volume
    projected:
      sources:
      - secret:
          name: mysecret
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
    volumeMounts:
    - name: projected-secret-volume
      readOnly: true
      mountPath: "/etc/projected-secret-volume"
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: test-container
    image: registry.k8s.io/busybox
