other-vpol/disallow-all-secrets/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: no-secrets-exceptions}
policies: [../disallow-all-secrets.yaml]
resources: [../.kyverno-test/resource.yaml]
exceptions: [../.kyverno-test/exceptions.yaml]
results:
- {kind: Pod, policy: no-secrets, resources: [default/secret-env-pod], result: skip, isValidatingPolicy: true}
- {kind: Pod, policy: no-secrets, resources: [default/partial-secret-pod], result: fail, isValidatingPolicy: true}
- {kind: Pod, policy: no-secrets, resources: [default/secret-ref-pod], result: fail, isValidatingPolicy: true}
- {kind: Pod, policy: no-secrets, resources: [default/good-pod], result: pass, isValidatingPolicy: true}
